--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -28,18 +28,17 @@ less than $1/3$ of the upgraded honest miners. Therefore we define the Velvet
 Honest Majority assumption, which will be used in our security proof.
 
 \begin{defn}{\textbf{Velvet Honest Majority}}
-	\textit{Let $g$ denote the percentage of miners that have upgraded and $n_v = g
-	\cdot n$ is the total number of upgraded parties. Then $t$ out of total $n_v$
-	parties are corrupted such that $2t < (1 - \delta)(n_v-t)$. }
-	\label{defn:smooth_pointer}
+	\textit{Let $n_v$ be the number of upgraded miners. Then $t$ out of total $n_v$
+	parties are corrupted such that $\dfrac{t}{n_v} < \dfrac{1 - \delta}{3} $. }
+	\label{defn:velvet_honest_majority}
 \end{defn}
 We believe that if we waive this requirement it is impossible to have a provably 
 secure NIPoPoW protocol under velvet fork conditions.
 This claim is described and discussed in the following.
 Note that any reference to adversarial party bound is respect to the number of
 upgraded parties $n_v$. Therefore, ``(1/2)-bounded adversary" holds for
-$t < (1 - \delta)(n_v - t)$, while ``(1/3)-bounded adversary" holds for
-$2t < (1 - \delta)(n_v - t)$.
+$\dfrac{t}{n_v} < \dfrac{1 - \delta}{2} $, while ``(1/3)-bounded adversary" holds for
+$\dfrac{t}{n_v} < \dfrac{1 - \delta}{3} $.
 
 \subsubsection{Impossibility of a secure protocol for (1/2)-bounded adversary}
 During our study on the problem we failed to prove the security of several protocol
@@ -51,7 +50,7 @@ any possible construction, we try to argue for it in this section.
 \textbf{Claim:} \textit{Assume $t$ adversarial out of total $n_v$ upgraded parties.
 There is no construction for NIPoPoW suffix proofs under velvet fork conditions,
 which is both succinct and secure for every adversary, such that
-$t < (1 - \delta)(n_v - t)$.}
+$\dfrac{t}{n_v} < \dfrac{1 - \delta}{2} $.}
 
 \textit{Discussion.} As explained earlier, since the adversary may use the interlink
 structure so as to include pointers to arbitrary blocks,  she may construct her own
