--- a/tex/sections/nipopows_velvet_fork/suffix_security.tex
+++ b/tex/sections/nipopows_velvet_fork/suffix_security.tex
@@ -19,24 +19,21 @@ the chain quality property holds with parameter $\mu_{cq} > 1 - (1 + \frac{\delt
 Our interest lies in keeping $\mu_{cq} \geq \dfrac{1}{2}$.
 From Theorem 3 we have:
 \begin{equation*}
-1 - (1 + \frac{\delta}{2}) \cdot \frac{t}{n-t} - \frac{\delta}{2} \geq \dfrac{1}{2} \Rightarrow 
-\frac{\delta}{2} \cdot \frac{t}{n-t} \leq \frac{1-\delta}{2}
+	1 - (1 + \frac{\delta}{2}) \cdot \frac{t}{n-t} - \frac{\delta}{2} \geq \dfrac{1}{2} \Rightarrow 
+	(1 + \delta)t \leq (1-\delta)(n-t)
 \end{equation*}
 
 Thus we have:
 \begin{center}
 \begin{equation}
-\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2}
+	t \leq \dfrac{1 - \delta}{3}\cdot n
 \end{equation}
 \end{center}
 
 
-\textbf{Theorem 4. (Suffix Proofs Security under velvet fork)} \textit{Assuming honest majority
-under velvet fork conditions such that $\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2}$,
-the non-interactive proofs-of-proof-of-work construction for computable
-$\kappa$-stable monotonic suffix-sensitive predicates under velvet fork conditions
-is secure with overwhelming probability in $\kappa$.}\\
-
+\begin{thm}{\textbf{Suffix Proofs Security under velvet fork}}
+	Assuming honest majority under velvet fork conditions such that $t \leq \dfrac{1 - \delta}{3}\cdot n_v$, the non-interactive proofs-of-proof-of-work construction for computable $\kappa$-stable monotonic suffix-sensitive predicates under velvet fork conditions is secure with overwhelming probability in $\kappa$.
+\end{thm}
 \textit{Proof.} By contradiction. We follow the proof construction of Theorem 2
 and extend it. Let $Q$ be a $\kappa-$stable monotonic suffix-sensitive chain
 predicate. Assume NIPoPoWs under velvet fork on $Q$ is insecure. Then, during
