--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -185,17 +185,14 @@ $C_1, C_2$ at rounds $r_1 \leq r_2$ respectively, it holds that $C_1^{\lceil k} 
 \end{defn}
 
 \begin{defn}{\textbf{Chain Quality Property}}
-	\textit{The chain quality property $Q_{cq}$ with
-parameters $\mu_{cq} \in \mathbb{R}$ and $l \in \mathbb{N}$ states that for any honest
-party \textit{P} with chain \textit{C}, it holds that for any $l$ consecutive
-blocks of \textit{C} the ratio of honest blocks is at least $\mu_{cq}$.}
+	\textit{The chain quality property $Q_{cq}$ with parameters $\mu_{cq} \in \mathbb{R}$ and $l \in \mathbb{N}$ states that for any honest party $P$ with chain $\mathcal{C}$ it holds that for any $l $ consecutive blocks of $\mathcal{C}$ the ratio of honest blocks is at least $\mu_{cq}$.}
 	\label{defn:chain_quality}
 \end{defn}
 
 \begin{defn}{\textbf{Chain Growth Property}}
 	\textit{The chain growth property $Q_{cg}$ with
 parameters $\tau \in \mathbb{R}$ and $s \in \mathbb{N}$ states that for any honest party
-\textit{P} with chain \textit{C}, it holds that for any $s$ rounds there are at least 
+\textit{P} with chain $\mathcal{C}$, it holds that for any $s$ rounds there are at least 
 $\tau \cdot s$ blocks added to the chain of \textit{P}}
 	\label{defn:chain_growth}
 \end{defn}
