--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -20,6 +20,8 @@
 \newtheorem{defn}{Definition}
 \theoremstyle{lemma}
 \newtheorem{lemma}{Lemma} 
+\theoremstyle{corollary}
+\newtheorem{corollary}{Corollary} 
 
 \begin{document}
 
