--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -14,6 +14,8 @@
 
 \usepackage{amsthm}
 
+\newcommand{\wbigcup}{\mathop{\bigcup}}
+
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[]
 \theoremstyle{definition}
@@ -240,7 +242,7 @@ deployed under a velvet fork in a provably secure manner.
 \import{sections/nipopows_velvet_fork/}{nipopows_velvet_fork.tex}
 
 
-\subsubsection{Security of Suffix Proofs}
+\subsection{Security of Suffix Proofs}
 \import{sections/nipopows_velvet_fork/}{suffix_security.tex}
 
 
