--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -296,7 +296,7 @@ for every pointer \textit{p} in \textit{B}'s interlink. Function
 pointer, in essence a pointer to the most recent \emph{smooth velvet}
 for the level denoted by the pointer itself. The \textit{updateInterlink} algorithm is given in Algorithm \ref{alg:updateInterlink}, which is essentially the same as in the case of a hard/soft fork, except for working on the smooth chain $\mathcal{C}_S$ instead of $\mathcal{C}$.
 
-\begin{algorithm}[h!]
+\begin{algorithm}[H]
 	\SetAlgoNoLine
 	\DontPrintSemicolon
 	\SetKwProg{Fn}{function}{:}{\text{end function}}
