Improve figure in velvet security proof

--- a/tex/sections/nipopows_velvet_fork/suffix_security.tex
+++ b/tex/sections/nipopows_velvet_fork/suffix_security.tex
@@ -61,12 +61,12 @@ The above are illustrated, among other, in Parts I, II of Figure \ref{fig:proof_
 
 \begin{figure}[h!]
 	\begin{center}
-		\includegraphics[scale=0.5]{figures/proof_velvet.png}
+		\includegraphics[scale=0.8]{figures/proof_velvet.pdf}
 	\end{center}
 	\caption{\textit{ Wavy lines imply one or more blocks. Dashed lines and arrows imply
 	interlink pointers to superblocks. \textbf{I}: the three round sets in two competing
 	proofs at different levels, \textbf{II}: the corresponding 0-level blocks implied by the two proofs,
-	\textbf{III}: blocks participating in chain $\mathcal{C}_B$ and block set $\widetilde{\mathcal{C}}_A$ as conceived by the verifier's perspective.}}	
+	\textbf{III}: blocks participating in chain $\mathcal{C}_B$ and block set $\widetilde{\mathcal{C}}_\mathcal{A}$ from the verifier's perspective.}}	
     \label{fig:proof_velvet}
 \end{figure}
 
