--- a/tex/sections/nipopows_hard_fork/security_proof_suffix.tex
+++ b/tex/sections/nipopows_hard_fork/security_proof_suffix.tex
@@ -95,7 +95,7 @@ majority assumption holds, specifically considering that $ \frac{pqt}{f} \approx
 \begin{defn}{\textbf{Adequate level of honest proof}}
 	\textit{Let $\pi$ be an
 	honestly generated proof constructed upon some adopted chain $C$ and let $b \in 
-	\pi $. Then $\mu'$ is defined as $\mu' = \max \{ \mu: \vert \pi\{b:\}\uparrow^{mu}
+	\pi $. Then $\mu'$ is defined as $\mu' = \max \{ \mu: \vert \pi\{b:\}\uparrow^{\mu}
 	\vert \geq \max( m+1, (1-\delta)2^{-\mu} \vert \pi\{b:\}\uparrow^{\mu}\downarrow \vert )\}$}.
 	\textit{We call $\mu'$ the adequate level of proof $\pi$ with respect to block b with
 	security parameters $\delta$ and m. Note that the adequate level of a proof is a
