--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -15,7 +15,7 @@ upgrade suggestion.
 Under stable conditions a velvet fork suggest that only a minority of upgraded parties needs to support the protocol update. Let $g$ express the percentage of honest upgraded parties to the total number of miners. We will refer to $g$ as the ``velvet parameter".
 
 \begin{defn}{\textbf{Velvet Parameter}}
-	\textit{Let $g$ be the velvet parameter for NIPoPoW protocols.  Then if $n_h$ the upgraded honest miners and $n$ the total number of miners it holds that $n_h = g \cdot n$.}
+	\textit{Let $g$ be the velvet parameter for NIPoPoW protocols.  Then if $n_h$ the upgraded honest miners and $n$ the total number of miners $t$ out of which are corrupted, it holds that $n_h = g (n - t)$.}
 	\label{defn:velvet_honest_majority}
 \end{defn}
 
