--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -51,8 +51,7 @@ There is no construction for NIPoPoW suffix proofs under velvet fork conditions,
 which is both succinct and secure for every adversary, such that
 $\dfrac{t}{n_h} < (1 - \delta)$.}
 
-\textit{Discussion.} As explained earlier, since the adversary may use the interlink
-structure so as to include pointers to arbitrary blocks,  she may construct her own
+\textit{Discussion.} As explained earlier, since the adversary may use the interlink structure so as to include pointers to arbitrary blocks,  she may construct her own
 chain history utilizing the non-smooth pointers included in the thorny blocks she
 generates. Such an example is given in Figure \ref{fig:generic_attack}.
 
@@ -188,9 +187,7 @@ the honest players and the sewed blocks could only be adversarially generated,
 thus the attack could never succeed for an adversary of less than $1/3$ of the
 total hashing power.
 
-We describe a protocol patch that operates as follows. The NIPoPoW protocol under
-velvet fork works as usual but each miner constructs smooth blocks. This means
-that  a block's interlink is constructed excluding thorny blocks (except the
+We describe a protocol patch that operates as follows. The NIPoPoW protocol under velvet fork works as usual but each miner constructs smooth blocks. This means that  a block's interlink is constructed excluding thorny blocks (except the
 pointers of level 0). In this way, although thorny blocks are accepted in the
 chain, they are not taken into consideration when updating the interlink structure
 for the next block to be mined. No honest block could now point to a thorny superblock
@@ -276,7 +273,7 @@ $\square$
 The following corollary emerges immediately from Lemmas \ref{lemm:smooths_before_smooth}, \ref{lemm:thorny_after_thorny}. This result is illustrated in Figure \ref{fig:adversarial_velvet_proof}.
 
 \begin{corollary}
-	\textit{Any adversarial proof $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$, containing both smooth and thorny blocks, consists of a prefix smooth subchain followed by a suffix thorny subchain.}
+	\textit{Any adversarial proof $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$ containing both smooth and thorny blocks consists of a prefix smooth subchain followed by a suffix thorny subchain.}
 	\label{cor:adversarial_proof_scheme}
 \end{corollary}
 
@@ -284,7 +281,7 @@ The following corollary emerges immediately from Lemmas \ref{lemm:smooths_before
 	\begin{center}
 		\includegraphics[scale=0.75]{figures/adversarial_velvet_proof.pdf}
 	\end{center}
-	\caption{\textit{In the general case the adversarial velvet suffix proof $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$ consists of an initial part of smooth blocks followed by  of thorny blocks.}}
+	\caption{\textit{In the general case the adversarial velvet suffix proof $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$ consists of an initial part of smooth blocks followed by thorny blocks.}}
 	\label{fig:adversarial_velvet_proof}
 \end{figure}
 
